Run the SoapUI tests as part of the maven build.